fix initial layout shift

--- a/MAKE-website/css/main.css
+++ b/MAKE-website/css/main.css
@@ -419,7 +419,7 @@ HOME
   gap: 10px;
   min-height: 200px;
   padding: 30px;
-  padding-bottom: 20vh;
+  padding-bottom: 10vh;
 }
 
 #welcome-message {
